# FiscalizaYA

./: .gitignore  README.md  STATUS_ATUAL.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  errors.py  filters.py  pagination.py  rate_limit.py  sanitizers.py  security.py  validators.py
backend/app/models/: __init__.py  category.py  history.py  occurrence.py  occurrence_attachment.py  priority.py  refresh_token.py  user.py
backend/app/routers/: auth.py  categories.py  dashboard.py  health.py  history.py  occurrences.py  priorities.py
backend/app/schemas/: auth.py  category.py  dashboard.py  history.py  occurrence.py  occurrence_attachment.py  priority.py
backend/app/services/: auth.py  crud.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/modules/app/: AppHeader.tsx  FeedbackSnackbars.tsx  utils.ts
frontend/src/modules/auth/: AuthContext.tsx  LoginScreen.tsx  types.ts
frontend/src/modules/dashboard/: DashboardCards.tsx  DashboardCharts.tsx  DashboardPage.tsx  api.ts  types.ts  useDashboardOverview.ts
frontend/src/modules/occurrences/: OccurrenceDialog.tsx  OccurrenceHistory.tsx  OccurrencePage.tsx  api.ts  types.ts  useOccurrencesController.ts
frontend/src/shared/: types.ts
frontend/src/shared/components/: ThemeModeToggle.tsx  TxFilterBar.tsx  TxStatusBadge.tsx
